# hmore_face

./: CMakeLists.txt  README.md  package.xml  rosdep.yaml
config/: face_params.yaml  face_params2.yaml  face_params3.yaml  hmore_face.yaml  hmore_face0.yaml  hmore_face2.yaml  hmore_face3.yaml
docs/: README.md
include/: jhcAnimHead.h  jhcFaceNode.h  jhcFestTTS.h  jhcGenTTS.h
launch/: hmore_face.launch  robot_face.launch
mesh/: GiGo.mesh  Lisa.mesh
mpi_face/: CMakeLists.txt  mpi_face.py
mpi_face/include/: jhcFaceApp.h
mpi_face/src/: jhcFaceApp.cpp  jhcFestTTS.cpp  mpi_face.cpp  mpi_spout.cpp
project/: CMakeLists.txt
project/config/: hmore_face.yaml  hmore_face3.yaml
project/mpi_face/: CMakeLists.txt
project/mpi_face/src/: jhcAnimHead.cpp
project/src/: main.cpp
scripts/: hmore_test.py
src/: jhcAnimHead.cpp  jhcFaceNode.cpp  jhcFestTTS.cpp  main.cpp
